# mocogpt

./: README.md  pyproject.toml
mocogpt/: __init__.py  _mocogpt.py
mocogpt/cli/: _args.py  _parser.py  _runner.py  _server.py  app.py
mocogpt/core/: _base.py  _handler.py  _matcher.py  _server.py  _sse.py  actual_server.py  base_matcher.py  base_server.py  base_typing.py  chat_completions.py  embeddings.py
tests/: chat_completions_test.py  conftest.py  embeddings_test.py  mocogpt_chat_test.py  mocogpt_embeddings_test.py  mocogpt_error_test.py  mocogpt_redirect_test.py  mocogpt_test.py
tests/cli/: chat_completions_cli_test.py  chat_completions_config.json  chat_completions_error_cli.json  chat_completions_error_cli_test.py  config.json  embeddings_cli_test.py  embeddings_config.json  embeddings_error_cli.json  embeddings_error_cli_test.py  moco_cli_test.py
